# tidewall-bench

./: .env.example  .gitignore  NOTICE  README.md  devenv.nix  devenv.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
data/: test_dataset.jsonl  verification_dataset.jsonl
data/examples/: 1.unnamed_array.testcases.json  2.tests.array.testcases.json  settings_with_overrides.tests.array.json  testcases.jsonl
tidewall_bench/: __main__.py  _exceptions.py  _types.py  aiguard_lab.py
tidewall_bench/api/: pangea_api.py
tidewall_bench/config/: detectors.py  log_fields.py  overrides.py  settings.py
tidewall_bench/defaults/: defaults.py
tidewall_bench/manager/: aiguard_manager.py  efficacy_tracker.py
tidewall_bench/testcase/: testcase.py
tidewall_bench/utils/: colors.py  utils.py
