[project]
name = "tidewall-bench"
version = "0.1.0"
description = "Benchmark suite for AI security guards (prompt injection, PII, secrets, topic detection)"
authors = [
    { name = "Tidewall Security" },
]
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse ==1.4.0",
    "crowdstrike-aidr ==0.6.0",
    "cyclopts ==4.5.2",
    "dotenv ==0.9.9",
    "pip-system-certs ==5.3",
    "pydantic ==2.12.5",
    "tzlocal ==5.3.1",
]

[project.urls]
Homepage = "https://tidewall.ai"
Repository = "https://github.com/tidewall-security/tidewall-bench"
Issues = "https://github.com/tidewall-security/tidewall-bench/issues"

[dependency-groups]
dev = [
    "mypy ==1.19.1",
    "ruff ==0.15.0",
]

[build-system]
requires = ["uv_build ==0.10.1"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "tidewall_bench"
module-root = ""

[tool.mypy]
plugins = ["pydantic.mypy"]
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "silent"
no_implicit_reexport = false
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",   # isort
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "UP",  # pyupgrade
]
ignore = ["E501"]
flake8-type-checking.runtime-evaluated-base-classes = ["pydantic.BaseModel"]
